--- a/LaserTag/LaserTag.csproj
+++ b/LaserTag/LaserTag.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Extensions\InputPortExtensions.cs" />
     <Compile Include="Laser\LaserDriver.cs" />
     <Compile Include="Laser\LaserPacket.cs" />
+    <Compile Include="Models\Commands.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Timer.cs" />
