--- a/LaserTag/LaserTag.Gun.csproj
+++ b/LaserTag/LaserTag.Gun.csproj
@@ -36,13 +36,16 @@
   </PropertyGroup>
   <Import Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <ItemGroup>
+    <Compile Include="..\LaserTag.Model\Commands.cs">
+      <Link>Model\Commands.cs</Link>
+    </Compile>
     <Compile Include="Controllers\BluetoothController.cs" />
     <Compile Include="Controllers\GameController.cs" />
     <Compile Include="Controllers\IOController.cs" />
     <Compile Include="Extensions\InputPortExtensions.cs" />
     <Compile Include="Laser\LaserDriver.cs" />
     <Compile Include="Laser\LaserPacket.cs" />
-    <Compile Include="Models\Commands.cs" />
+    <Compile Include="Model\CommandsExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Timer.cs" />
