--- a/LaserTag.Gun/LaserTag.Gun.csproj
+++ b/LaserTag.Gun/LaserTag.Gun.csproj
@@ -36,8 +36,8 @@
   </PropertyGroup>
   <Import Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <ItemGroup>
-    <Compile Include="..\LaserTag.Model\Commands.cs">
-      <Link>Model\Commands.cs</Link>
+    <Compile Include="..\LaserTag.Model\Command.cs">
+      <Link>Model\Command.cs</Link>
     </Compile>
     <Compile Include="Controllers\BluetoothController.cs" />
     <Compile Include="Controllers\GameController.cs" />
@@ -45,7 +45,6 @@
     <Compile Include="Extensions\InputPortExtensions.cs" />
     <Compile Include="Laser\LaserDriver.cs" />
     <Compile Include="Laser\LaserPacket.cs" />
-    <Compile Include="Model\CommandsExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Timer.cs" />
@@ -63,7 +62,7 @@
     <Reference Include="GoBus" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Nrf8001\Nrf8001Driver.csproj">
+    <ProjectReference Include="..\Nrf8001Driver\Nrf8001Driver.csproj">
       <Project>{5DF5842F-2712-4E9E-9262-F626D7204818}</Project>
       <Name>Nrf8001Driver</Name>
     </ProjectReference>
