--- a/LaserTag.Gun/LaserTag.Gun.csproj
+++ b/LaserTag.Gun/LaserTag.Gun.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Laser\LaserPacket.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Timer.cs" />
+    <Compile Include="Timers\Timer.cs" />
     <Compile Include="Workarounds\DebuggerBrowsableState.cs" />
   </ItemGroup>
   <ItemGroup>
