--- a/Nrf8001Driver/Nrf8001Driver.csproj
+++ b/Nrf8001Driver/Nrf8001Driver.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Events\DataCreditEvent.cs" />
     <Compile Include="Events\DataReceivedEvent.cs" />
     <Compile Include="Events\DeviceStartedEvent.cs" />
+    <Compile Include="Events\DisconnectedEvent.cs" />
     <Compile Include="Extensions\AciEventTypeExtensions.cs" />
     <Compile Include="Extensions\ByteArrayExtensions.cs" />
     <Compile Include="Extensions\SPIExtensions.cs" />
