--- a/NetmfHelpers/NetmfHelpers.csproj
+++ b/NetmfHelpers/NetmfHelpers.csproj
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
-    <AssemblyName>Microchip25xx080Driver</AssemblyName>
+    <AssemblyName>NetmfHelpers</AssemblyName>
     <OutputType>Library</OutputType>
-    <RootNamespace>Microchip25xx080Driver</RootNamespace>
+    <RootNamespace>NetmfHelpers</RootNamespace>
     <ProjectTypeGuids>{b69e3092-b931-443c-abe7-7e7b65f2a37f};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{3AA01119-4CEF-418F-9841-193C8EC1F4B4}</ProjectGuid>
+    <ProjectGuid>{7F9F3FD6-BD65-40BB-8165-B2997C72E6D8}</ProjectGuid>
     <TargetFrameworkVersion>v4.3</TargetFrameworkVersion>
     <NetMfTargetsBaseDir Condition="'$(NetMfTargetsBaseDir)'==''">$(MSBuildExtensionsPath32)\Microsoft\.NET Micro Framework\</NetMfTargetsBaseDir>
     <TargetFrameworkProfile />
@@ -31,19 +31,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DebuggerBrowsableState.cs" />
-    <Compile Include="Instruction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Mc25xx080.cs" />
+    <Compile Include="MultiSyncedSPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.SPOT.Hardware" />
     <Reference Include="Microsoft.SPOT.Native" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\NetmfHelpers\NetmfHelpers.csproj">
-      <Project>{7F9F3FD6-BD65-40BB-8165-B2997C72E6D8}</Project>
-      <Name>NetmfHelpers</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Condition="EXISTS('$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets')" Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <Import Condition="!EXISTS('$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets')" Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
